# cargo_crev_web_admin

./: .auto_version_from_date.json  Cargo.toml  LICENSE  README.md  cache9.txt  objects_v1.plantuml
automation_tasks_rs/: Cargo.toml
automation_tasks_rs/src/: main.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/cargo_crev_web_admin/: all.html  constant.GREEN.html  constant.RED.html  constant.RESET.html  constant.YELLOW.html  fn.__stability.html  fn.__static_ref_initialize.html  fn.blocklisted_add.html  fn.blocklisted_delete.html  fn.blocklisted_list.html  fn.count_newlines.html  fn.datetime_now_for_file_names.html  fn.delete_untrusted_repos.html  fn.fetch.html  fn.find_repos_with_reviews_on_github.html  fn.get_data_dir.html  fn.list_new_repos.html  fn.list_repos_to_unblock.html  fn.ns_elapsed.html  fn.ns_print_ms.html  fn.ns_print_ns.html  fn.ns_start.html  fn.publish_to_github.html  fn.reindex.html  fn.remotes_delete.html  fn.trusted.html  fn.trusted_add.html  fn.trusted_delete.html  fn.trusted_from_crev_command.html  fn.trusted_list.html  index.html  sidebar-items.js  static.LAZY.html  struct.CLEAR_ALL.html  struct.CLEAR_LINE.html  struct.CREV_REMOTES_DIR.html  struct.GREEN.html  struct.HOME_DIR.html  struct.RED.html  struct.RESET.html  (+1 more)
docs/cargo_crev_web_admin/blocklisted_repos_mod/: constant.FIELDS.html  enum.__Field.html  fn.__stability.html  fn.__static_ref_initialize.html  index.html  sidebar-items.js  static.LAZY.html  struct.BLOCKLISTED_REPOS_JSON.html  struct.BlocklistedRepos.html  struct.__FieldVisitor.html  struct.__Visitor.html
docs/cargo_crev_web_admin/list_new_repos_mod/: fn.list_new_repos.html  fn.list_repos_to_unblock.html  index.html  sidebar-items.js
docs/cargo_crev_web_admin/my_trusted_repos_mod/: index.html  sidebar-items.js  struct.MyTrustedRepos.html
docs/cargo_crev_web_admin/utils_mod/: constant.RED.html  (+17 more)
sample_data/: blocklisted_repos.json  repos_with_reviews_github.json
sample_data/trust/: 2021-12-pBsPEg.proof.crev  2022-01-pBsPEg.proof.crev
src/: blocklisted_repos_mod.rs  find_repos_with_reviews_mod.rs  lib.rs  list_new_repos_mod.rs  my_trusted_repos_mod.rs  repos_with_reviews_mod.rs  utils_mod.rs
src/my_trusted_repos_mod/: crev_file_mod.rs  crev_proof_mod.rs  my_trust_crev_files_mod.rs  trust_yaml_proofs_mod.rs
tmp/: temp9.txt
(+61 files in other folders)
