[package]
name = "cargo_crev_web_admin"
version = "2023.605.1130"
description = "Admin CLI for cargo_crev_web"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/cargo_crev_web_admin/"
categories = ["programming"]
keywords = ["crev"]
publish = false

[dependencies]
log = "0.4"
pretty_env_logger="0.4.0"
unwrap = "1.2.1"
lazy_static="1.4.0"
num-format="0.4.0"
serde = "1.0.110"
serde_json="1.0.78"
serde_derive="1.0.136"
serde_yaml="0.8.23"
anyhow="1.0.53"
dev_bestia_string_utils ="0.1.19"
chrono="0.4.19"
home="0.5.3"