[package]
name = "cargo_crev_web_admin"
version = "2023.607.1237"
description = "Admin CLI for cargo_crev_web"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/cargo_crev_web_admin/"
categories = ["programming"]
keywords = ["crev"]
publish = false

[dependencies]
log = "0.4.18"
pretty_env_logger="0.5.0"
unwrap = "1.2.1"
lazy_static="1.4.0"
num-format="0.4.4"
serde = "1.0.163"
serde_json="1.0.96"
serde_derive="1.0.163"
serde_yaml="0.9.21"
anyhow="1.0.71"
dev_bestia_string_utils ="0.1.19"
chrono="0.4.26"
home="0.5.5"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
