[package]
name = "cargo_crev_web_admin"
version = "2023.608.746"
description = "Admin CLI for cargo_crev_web"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/cargo_crev_web_admin/"
# Allowed categories are listed here <https://crates.io/category_slugs>
categories = ["programming"]
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["crev"]
publish = false

[dependencies]
log = "0.4.18"
pretty_env_logger="0.5.0"
unwrap = "1.2.1"
lazy_static="1.4.0"
num-format="0.4.4"
serde = "1.0.163"
serde_json="1.0.96"
serde_derive="1.0.163"
serde_yaml="0.9.21"
anyhow="1.0.71"
dev_bestia_string_utils ="0.1.19"
chrono="0.4.26"
home="0.5.5"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
